# Hashing-Project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv
src/Hash/: __init__.py
src/constants/: __init__.py
src/driver/: __init__.py
src/logger/: __init__.py
src/preprocess_text/: __init__.py
