[project]
name = "Hashing"
version = "0.0.1"
description = "HAshing project"
authors = [
    {name = "Prathamesh Uravane", email = "upratham2002@gmail.com"},
    {name = "Sankeerth B", email = "sankeerthb@gmail.com"}]
requires-python = "==3.12.*"
dependencies = [
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

